--- a/.env
+++ b/.env
@@ -1,2 +1,13 @@
 DATABASE_URL="postgresql://shikandar:Badusha%40123@localhost:5432/myapp?schema=public"
-WORKER_PORT=3001
+
+# Redis (for queue)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# Application Ports
+KOMP_PORT=8000
+WORKER_PORT=8001
+
+# Other Configuration
+NODE_ENV=development
